# Quant-Sol

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/backtesting/: backtester.rs  mod.rs
src/data/: ingestion.rs  mod.rs  processing.rs
src/strategies/: bollinger_bands.rs  mod.rs  rsi.rs
